--- a/public/styles/new-tweet.scss
+++ b/public/styles/new-tweet.scss
@@ -1,4 +1,4 @@
-.new-tweet {
+#new-tweet {
   padding: 20px;
 
   background-color: #eef3fb;
@@ -36,7 +36,6 @@
 
     .invalid {
       color: red;
-      text-decoration: line-through;
     }
   }
 }
