--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -18,7 +18,7 @@ html {
 * {
   font-family: 'Roboto Condensed', sans-serif;
 
-  .flexContainer {
+  .flex-container {
     display: flex;
     flex-flow: row nowrap;
   }
@@ -28,7 +28,7 @@ html {
     color: #244751;
     background-color: #eef3fb;
 
-    main {
+    #main-container {
       width: 450px;
       margin: 0 auto;
       padding: 50px 2em;
