Updated styles and added compose button to hide/show new-tweet button

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,7 +12,10 @@
     margin-top: 20px;
     padding: 5px;
     width: 100%;
+    resize: none;
     font-size: 1.5rem; }
+  #new-tweet textarea:focus {
+    border: 2px solid #00a087; }
   #new-tweet .tweet-lower {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
