--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,8 +1,3 @@
-.flex-container {
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start; }
-
 nav {
   position: -webkit-sticky;
   position: sticky;
@@ -14,11 +9,40 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: #00a087;
   color: #e8fdff; }
   nav img {
     width: 80px;
     height: 80px; }
   nav .header {
-    margin: 20px 0 0 10px;
+    margin-left: 10px;
     font-size: 3rem; }
+  nav #compose-button {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    right: 2em;
+    width: 10%;
+    height: 60px;
+    background: #eef3fb;
+    border: 2px solid #408882;
+    border-radius: 5px;
+    color: #408882;
+    font-size: 2rem; }
+  nav #compose-button:hover {
+    cursor: pointer;
+    background: #4ec3bb;
+    color: #fff; }
