--- a/public/styles/nav.scss
+++ b/public/styles/nav.scss
@@ -1,7 +1,3 @@
-.flex-container {
-  justify-content: flex-start;
-}
-
 nav {
   position: sticky;
   top: 0;
@@ -10,6 +6,8 @@ nav {
   width: 100%;
   padding: 0 2em;
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
   background-color: #00a087;
   color: #e8fdff;
@@ -20,7 +18,29 @@ nav {
   }
 
   .header {
-    margin: 20px 0 0 10px;
+    margin-left: 10px;
     font-size: 3rem;
+  }
+
+  #compose-button {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: 2em;
+    width: 10%;
+    height: 60px;
+
+    background: #eef3fb;
+    border: 2px solid #408882;
+    border-radius: 5px;
+    color: #408882;
+    font-size: 2rem;
+  }
+
+  #compose-button:hover {
+    cursor: pointer;
+    background: #4ec3bb;
+    color: #fff;
   }
 }
