--- a/public/styles/new-tweet.scss
+++ b/public/styles/new-tweet.scss
@@ -17,8 +17,13 @@
     margin-top: 20px;
     padding: 5px;
     width: 100%;
+    resize: none;
 
     font-size: 1.5rem;
+  }
+
+  textarea:focus {
+    border: 2px solid #00a087;
   }
 
   .tweet-lower {
