--- a/public/styles/partials/_nav.scss
+++ b/public/styles/partials/_nav.scss
@@ -1,3 +1,5 @@
+@import '../variables.scss';
+
 nav {
   position: sticky;
   top: 0;
@@ -9,8 +11,8 @@ nav {
   justify-content: flex-start;
   align-items: center;
 
-  background-color: #00a087;
-  color: #e8fdff;
+  background-color: $accent-color-1;
+  color: $primary-color;
 
   img {
     width: 80px;
@@ -31,16 +33,16 @@ nav {
     width: 10%;
     height: 60px;
 
-    background: #eef3fb;
-    border: 2px solid #408882;
+    background: $primary-color;
+    border: 2px solid $secondary-color;
     border-radius: 5px;
-    color: #408882;
+    color: $secondary-color;
     font-size: 2rem;
   }
 
   #compose-button:hover {
     cursor: pointer;
-    background: #4ec3bb;
+    background: $accent-color-1-hover;
     color: #fff;
   }
 }
