--- a/public/styles/partials/_new-tweet.css
+++ b/public/styles/partials/_new-tweet.css
@@ -1,6 +1,3 @@
-html {
-  font-size: 62.5%; }
-
 #new-tweet {
   padding: 20px;
   display: none;
@@ -11,7 +8,7 @@ html {
     margin: 0;
     width: 100%;
     font-size: 2rem;
-    border-bottom: 2px solid #666; }
+    border-bottom: 2px solid #ccc; }
   #new-tweet textarea {
     margin-top: 20px;
     padding: 5px;
