--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,3 +2,4 @@
 @import url('partials/_nav.css');
 @import url('partials/_new-tweet.css');
 @import url('partials/_tweets.css');
+@import url('partials/_media-queries.css');
