--- a/public/styles/partials/_layout.scss
+++ b/public/styles/partials/_layout.scss
@@ -15,11 +15,21 @@ html {
     font-family: 'Roboto Condensed', sans-serif;
 
     #main-container {
-      width: 450px;
+      max-width: 450px;
       margin: 0 auto;
-      padding: 2rem;
+      padding: 0 2rem 2rem 2rem;
 
       background-color: #fff;
+
+      .whitespace {
+        width: 100%;
+        background: white;
+        height: 2rem;
+        z-index: 50;
+        position: sticky;
+        top: 8rem;
+      }
     }
   }
 }
+
