--- a/public/styles/partials/_nav.scss
+++ b/public/styles/partials/_nav.scss
@@ -24,25 +24,10 @@ nav {
     font-size: 3rem;
   }
 
-  #compose-button {
+  .compose-button {
+    @include button(13rem);
     position: absolute;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    right: 2em;
-    width: 10%;
-    height: 60px;
-
-    background: $primary-color;
-    border: 2px solid $secondary-color;
-    border-radius: 5px;
-    color: $secondary-color;
-    font-size: 2rem;
-  }
-
-  #compose-button:hover {
-    cursor: pointer;
-    background: $accent-color-1-hover;
-    color: #fff;
+    right: 2rem;
   }
 }
