--- a/public/styles/partials/_new-tweet.css
+++ b/public/styles/partials/_new-tweet.css
@@ -1,35 +1,87 @@
-#new-tweet {
-  padding: 20px;
+#new-tweet-desktop-container {
   display: none;
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100%;
+  background-color: white;
+  border-bottom: 2px solid #ccc;
+  z-index: 10;
+  padding: 0 0 2rem 0;
+  top: 10rem; }
+
+#new-tweet-mobile-container {
+  display: none;
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100%;
+  background-color: white;
+  border-bottom: 2px solid #ccc;
+  z-index: 10;
+  padding: 2rem 0;
+  top: 16rem; }
+
+.compose-button.mobile {
+  width: 100%;
+  height: 60px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: #eef3fb;
+  border: 2px solid #244751;
+  border-radius: 5px;
+  color: #244751;
+  font-size: 2rem;
+  display: none;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 10rem;
+  z-index: 10; }
+  .compose-button.mobile:hover {
+    cursor: pointer;
+    background: #006d5c;
+    color: #fff; }
+
+.new-tweet {
+  padding: 20px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 20rem;
+  z-index: 10;
   background-color: #eef3fb;
   border: 1px solid #ccc;
   border-radius: 10px; }
-  #new-tweet h2 {
+  .new-tweet h2 {
     margin: 0;
     width: 100%;
     font-size: 2rem;
     border-bottom: 2px solid #ccc; }
-  #new-tweet textarea {
+  .new-tweet textarea {
     margin-top: 20px;
     padding: 5px;
     width: 100%;
     resize: none;
     font-size: 1.5rem; }
-  #new-tweet textarea:focus {
+  .new-tweet textarea:focus {
     border: 2px solid #00a087; }
-  #new-tweet .tweet-lower {
+  .new-tweet .tweet-lower {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
     font-size: 1.5rem; }
-    #new-tweet .tweet-lower .submit {
+    .new-tweet .tweet-lower .submit {
       margin-top: 2px; }
-    #new-tweet .tweet-lower .counter {
+    .new-tweet .tweet-lower .counter {
       margin: 7px;
       font-style: italic; }
-    #new-tweet .tweet-lower .invalid {
+    .new-tweet .tweet-lower .invalid {
       color: red; }
-  #new-tweet .error {
+  .new-tweet .error {
     display: none;
     margin-top: 10px;
     padding: 10px;
@@ -38,5 +90,5 @@
     color: white;
     border: 1px solid red;
     border-radius: 5px; }
-    #new-tweet .error .bold {
+    .new-tweet .error .bold {
       font-weight: 700; }
