--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -7,3 +7,31 @@ $accent-color-2: #b7c4c3;
 $accent-color-2-hover: darken($accent-color-2, 10);
 $border-color: #ccc;
 $border-color-hover: darken($border-color, 10);
+
+@mixin button($width) {
+  width: $width;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+
+  background: $primary-color;
+  border: 2px solid $secondary-color;
+  border-radius: 5px;
+  color: $secondary-color;
+  font-size: 2rem;
+
+  &:hover {
+    cursor: pointer;
+    background: $accent-color-1-hover;
+    color: #fff;
+  }
+}
+
+@mixin new-tweet-container {
+  display: none;
+  position: sticky;
+  width: 100%;
+  background-color: white;
+  border-bottom: 2px solid $border-color;
+  z-index: 10;
+}
