Removed whitespace from desktop version

--- a/public/styles/partials/_layout.css
+++ b/public/styles/partials/_layout.css
@@ -21,6 +21,5 @@ html {
         background: white;
         height: 2rem;
         z-index: 50;
-        position: -webkit-sticky;
-        position: sticky;
+        position: static;
         top: 8rem; }
