--- a/public/styles/partials/_layout.scss
+++ b/public/styles/partials/_layout.scss
@@ -26,7 +26,7 @@ html {
         background: white;
         height: 2rem;
         z-index: 50;
-        position: sticky;
+        position: static;
         top: 8rem;
       }
     }
