--- a/public/styles/partials/_media-queries.scss
+++ b/public/styles/partials/_media-queries.scss
@@ -17,6 +17,10 @@
 
       #main-container {
 
+        .whitespace {
+          position: sticky;
+        }
+
         .compose-button {
           display: flex;
         }
