--- a/public/styles/partials/_nav.css
+++ b/public/styles/partials/_nav.css
@@ -46,3 +46,20 @@ nav {
       cursor: pointer;
       background: #006d5c;
       color: #fff; }
+  nav .whitespace-mobile.higher {
+    display: none;
+    width: 100%;
+    background: white;
+    height: 2rem;
+    z-index: 50;
+    position: absolute;
+    bottom: -2rem; }
+  nav .whitespace-mobile.lower {
+    display: none;
+    width: calc(100% - 4rem);
+    background: white;
+    height: 2rem;
+    z-index: 50;
+    position: absolute;
+    bottom: -10rem;
+    border-bottom: 2px solid #ccc; }
