--- a/public/styles/partials/_layout.scss
+++ b/public/styles/partials/_layout.scss
@@ -17,17 +17,18 @@ html {
     #main-container {
       max-width: 450px;
       margin: 0 auto;
-      padding: 0 2rem 2rem 2rem;
+      padding: 2rem;
+      position: relative;
 
       background-color: #fff;
 
-      .whitespace {
+      .whitespace-desktop {
         width: 100%;
         background: white;
         height: 2rem;
         z-index: 50;
-        position: static;
-        top: 8rem;
+        position: absolute;
+        top: -2rem;
       }
     }
   }
