--- a/public/styles/partials/_new-tweet.css
+++ b/public/styles/partials/_new-tweet.css
@@ -6,7 +6,7 @@
   background-color: white;
   border-bottom: 2px solid #ccc;
   z-index: 10;
-  padding: 0 0 2rem 0;
+  padding: 2rem 0;
   top: 10rem; }
 
 #new-tweet-mobile-container {
