--- a/public/styles/partials/_tweets.css
+++ b/public/styles/partials/_tweets.css
@@ -4,6 +4,8 @@
   background-color: #eef3fb;
   border: 1px solid #fff;
   border-radius: 10px; }
+  .tweet:first-of-type {
+    margin-top: 40px; }
   .tweet header {
     min-height: 72px;
     display: -webkit-box;
